--- a/index.html
+++ b/index.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="styles/styles.css">
-  </head>
-  <body>
-    <div class="header">
-      <h2>To Do List</h2>
-      <input type="text" id="listInput">
-      <button onclick="newElement()" class="addButton">+</button>
-    </div>
-    <ul id="toDoList">
-      <li class="checked">Begin to learn coding while in a bootcamp</li>
-      <li>Practice coding everyday</li>
-      <li>Master CSS / HTML</li>
-      <li class="checked">Make a simple website with a header and footer</li>
-      <li>Create JavaScript projects</li>
-      <li>Master JavaScript</li>
-      <li>Take assesments on HTML and CSS</li>
-    </ul>
-    <script src="scripts/scripts.js"></script>
-  </body>
+    <head>
+        <link href="style/styles.css">
+        <title></title>
+    </head>
+    <body>
+        <script src="script/scripts.js"></script>
+    </body>
 </html>
