Created a tip calculator

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="style/styles.css">
-        <title></title>
+        <link href="styles/styles.css">
+        <title>Tip Calculator</title>
     </head>
     <body>
-        <script src="script/scripts.js"></script>
+        <h1>Tip Calculator</h1>
+        <p>Bill:</p>
+        <input placeholder="Amount due before tip" type="number" id="bill-amount" class="calc-input">
+        <p>Quality of Service:</p>
+        <select id="service-quality" class="tip-selector">
+            <option selected disabled hidden>Please select an option</option>
+            <option value=".05">5% - I've had enough...</option>
+            <option value=".10">10% - Absolutely gutted!</option>
+            <option value=".15">15% - Not bad</option>
+            <option value=".20">20% - May I have another?</option>
+            <option value=".30">30% - Hmmm... you're pretty good</option>
+        </select>
+        <p>Split Bill:</p>
+        <input placeholder="# of people splitting bill" type="number" id="split-parties" class="calc-input">
+        <script src="scripts/scripts.js"></script>
+        <button id="calculate">Calculate Tip</button>
     </body>
 </html>
