Added display of results for values tip & total

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         </select>
         <p>Split Bill:</p>
         <input placeholder="# of people splitting bill" type="number" id="split-parties" class="calc-input">
+        <span id="tip">Tip Due - </span>
+        <span id="total">Total Due - </span>
         <script src="scripts/scripts.js"></script>
         <button id="calculate">Calculate Tip</button>
     </body>
