--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
         <title>Tip Calculator</title>
     </head>
     <body>
